feat: compact conversation summary with turn IDs and history tool hint
Rewrites getCompressedSummary to drastically reduce initial prompt size:

- Groups entries into named turns (t1, t2, t3…)
- Last 2 turns: full user input + full agent text
- Older turns: first 200 chars of user + agent text, marked as truncated
- Tool calls, thoughts, sub-agents: replaced with count markers
  e.g. "[5 tool calls, 2 thinking blocks]" instead of listing each one
- Builds from newest → oldest within a 4000-char budget
- Header tells agent how many turns exist and how to fetch any turn in full

Adds turn_id parameter to search_conversation_history tool:
- Accepts "t3" or "3" to fetch a specific turn by position
- Defaults file to "current" when only turn_id is specified
- Parses tN → selects that exact turn block from the JSON

Also fixes several pre-existing warnings in SearchConversationHistoryTool
(unused import, duplicated string literals, nested ternary, if simplification).

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>